--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
       <div class="col s4">
         <img src="imagenes/rega.png" style="width: 150px""height: 100px">
     <h3>Regalo</h3>
-    <p>i deseás realizarnos un regalo podés colaborar con nuestra Luna de Miel...
+    <p>Si deseás realizarnos un regalo podés colaborar con nuestra Luna de Miel...
 En la Recepción habrá un Buzón de Bodas para depositar sobres</p>
 <a class="waves-effect waves-light btn  brown">ver mas</a>
         <!-- Promo Content 3 goes here -->
       </div>
        <div class="col s4">
-        <img src="imagenes/rega.png" style="width: 150px""height: 100px">
-    <h3>confirmar asistencia</h3>
+        <img src="imagenes/confrm.png" style="width: 150px""height: 100px">
+    <h3>Confirmar asistencia</h3>
     <p>Esperamos que seas parte de la celebracion,Confirma asistencia </p>
 <a class="waves-effect waves-light btn  brown"a href="forms.html">ver mas</a>
         <!-- Promo Content 3 goes here -->
@@ -72,7 +72,7 @@ En la Recepción habrá un Buzón de Bodas para depositar sobres</p>
           
 
    <footer>
-  <p>Sebie "Money" Rom<br>
+  <p>Sebie "m" Rom<br>
   <a href="mailto:hege@example.com">sebiemoney@gmail.com</a></p>
 </footer>         
 </body>
