--- a/forms.html
+++ b/forms.html
@@ -28,8 +28,10 @@
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdSj-b1QO5awrn_EXW3rI1puvoHWgYmY0UiedZdi8FHGrBTPw/viewform?embedded=true" width="640" height="780" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 <a class="waves-effect waves-light btn  brown"a href="index.html">volver</a>
  <footer>
-  <p>Sebie "Money" Rom<br>
-  <a href="mailto:hege@example.com">sebiemoney@gmail.com</a></p>
+  <p>Creator  Desarrollo web/ ux ui /Marketing digital © todos los derechos reserados<br>
+
+  <a href="mailto:Sebastianromeropoma89@gmail.com">Sebastianromeropoma89@gmail.com</a>
+</p>
 </footer>         
 </body>
 
